--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">MySubscriptionManager</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading…</string>
     <string name="name">Name</string>
@@ -35,4 +34,6 @@
     <string name="do_you_want_to_delete">Do you want to delete this item?</string>
     <string name="do_you_want_to_exit">Do you want to exit?</string>
     <string name="important_">Important!</string>
+    <string name="set_alarm">Set Alarm</string>
+    <string name="cancel_alarm">Cancel Alarm</string>
 </resources>
